@@ -46,8 +46,98 @@ if(isset($_REQUEST['%IF']))
 	
 	if(count($files) > 0)
 	{
+		// set the file variable
 		$_REQUEST['%IF'] = $files[0]['Filepath'];
+		
+		
+		// make sure the length of the file is known
+		foreach($GLOBALS['modules'] as $i => $module)
+		{
+			if($module != $_REQUEST['cat'] && call_user_func_array($module . '::handles', array($files[0]['Filepath'])))
+			{
+				$return = call_user_func_array($module . '::get', array($database, array('file' => $files[0]['Filepath']), &$tmp_count, &$tmp_error));
+				if(isset($return[0])) $files[0] = array_merge($return[0], $files[0]);
+			}
+		}
+		
+		ob_start();
+		
+		if(isset($_SESSION)) session_write_close();
+		
+		// set up some general headers
+		header('Content-Transfer-Encoding: binary');
+		header('Content-Type: ' . $files[0]['Filemime']);
+		header('Content-Disposition: attachment; filename="' . $files[0]['Filename'] . '"');
+		
+		// check for range request
+		if(isset($_SERVER['HTTP_RANGE']))
+		{
+			list($size_unit, $range_orig) = explode('=', $_SERVER['HTTP_RANGE'], 2);
+	
+			if ($size_unit == 'bytes')
+			{
+				// multiple ranges could be specified at the same time, but for simplicity only serve the first range
+				// http://tools.ietf.org/id/draft-ietf-http-range-retrieval-00.txt
+				if(strpos($range_orig, ',') !== false)
+					list($range, $extra_ranges) = explode(',', $range_orig, 2);
+				else
+					$range = $range_orig;
+			}
+			else
+			{
+				$range = '-';
+			}
+		}
+		else
+		{
+			$range = '-';
+		}
+		
+		// figure out download piece from range (if set)
+		list($seek_start, $seek_end) = explode('-', $range, 2);
+	
+		// set start and end based on range (if set), else set defaults
+		// also check for invalid ranges.
+		$seek_end = (empty($seek_end)) ? ($files[0]['Filesize'] - 1) : min(abs(intval($seek_end)),($files[0]['Filesize'] - 1));
+		//$seek_end = $files[0]['Filesize'] - 1;
+		$seek_start = (empty($seek_start) || $seek_end < abs(intval($seek_start))) ? 0 : max(abs(intval($seek_start)),0);
+		
+		// Only send partial content header if downloading a piece of the file (IE workaround)
+		if ($seek_start > 0 || $seek_end < ($files[0]['Filesize'] - 1))
+		{
+			header('HTTP/1.1 206 Partial Content');
+		}
+
+		header('Accept-Ranges: bytes');
+		header('Range: bytes ' . $seek_start . '-' . $seek_end . '/' . $files[0]['Filesize']);
+	
+		//headers for IE Bugs (is this necessary?)
+		//header("Cache-Control: cache, must-revalidate");  
+		//header("Pragma: public");
+	
+		header('Content-Length: ' . ($seek_end - $seek_start + 1));
+		
+		// get the time offset but only if the time variable exists
+		if(isset($files[0]['Length']))
+		{
+			// calculate where to start
+			$_REQUEST['%TO'] = $files[0]['Length'] * ($seek_start / $files[0]['Filesize']);
+		}
 	}
+	else
+	{
+		exit;
+	}
+	print_r($_SERVER);
+	
+	$buffer = ob_get_contents();
+	ob_end_clean();
+	
+	$tp = fopen('/tmp/test.txt', 'a');
+	fwrite($tp, $seek_start . ' - ' . $seek_end . (isset($_SERVER['HTTP_RANGE'])?(' - ' . $_SERVER['HTTP_RANGE']):'') . "\n");
+	fwrite($tp, $buffer);
+	fclose($tp);
+	
 }
 else
 {
@@ -58,7 +148,7 @@ else
 // first filter out all the unwanted request vars
 foreach($_REQUEST as $key => $value)
 {
-	if(!in_array($key, array('encode', '%IF', '%VC', '%AC', '%VB', '%AB', '%SR', '%CH', '%MX')))
+	if(!in_array($key, array('encode', '%IF', '%VC', '%AC', '%VB', '%AB', '%SR', '%CH', '%MX', '%TO')))
 		unset($_REQUEST[$key]);
 }
 
@@ -142,6 +232,9 @@ if(!is_numeric($_REQUEST['%CH']))
 
 if(!in_array($_REQUEST['%MX'], array('ts', 'ps', 'mpeg1', 'asf', 'mp4', 'dummy')))
 	$_REQUEST['%MX'] = 'mpeg1';
+	
+if(!isset($_REQUEST['%TO']))
+	$_REQUEST['%TO'] = 0;
 
 // replace the argument string with the contents of $_REQUEST
 //  without validation this is VERY DANGEROUS!
